    file's permissions to 0600 to work around this brain damage
- Improved JSP syntax highlighting (Daiji Takamori)
- Quick-copy (middle mouse button pasting most recent selection) is now
  disabled by default, since people seem to get confused by it to no end
  when they accidentally click the middle mouse button while using a
  wheel mouse to scroll

+ Bug Fixes

- Next-fold command was slightly broken
- Fixed possible plugin manager NPE when installing incompatible plugins
- On some Java versions, the plugin manager's progress windows would
  hang until explicitly given focus
- Minor fix for S+HOME/S+END behavior
- Fixed for weird caret position after control-clicking a closing
  bracket
- The position of the wrap guide is now determined using the Java2D API,
  so it should be correct now. Previously, it could be drawn in the
  wrong place if anti-aliasing was enabled
- The tab width is also determined using the correct APIs
- Fixed possible NullPointerException in VFS file dialog box
- Fixed minor bug in 'Select Fold' command
- Fixed some JDK 1.4-specific bugs:
  - The 'select text on focus' feature of some text fields fixed
  - File system browser's type select fixed
  - Keyboard shortcuts only worked in the text area
  - Sometimes keyboard focus would jump to the search bar
  - Unfortunately, fixing the last two required the use of Java
    1.4-specific APIs. As a result, the Java14.java source file will not
    compile under a 1.3 JDK.
- Embedded tabs in lines would show up as boxes in bracket matching
  status bar messages
- Sometimes hard tabs would be inserted into the buffer, even if soft
  tabs were enabled
- Trying to reload a read only file would fail
- Fixed possible NullPointerException in 'Styles' option pane
- I removed the feature that automatically folds newly inserted text as
  necessary, because it had too many problems
- Changed some tree cell renderers to work around problems experienced
  on MacOS X